--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,23 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.66.0</version>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>io.github.lognet</groupId>
 			<artifactId>grpc-spring-boot-starter</artifactId>
 			<version>5.1.5</version>
+		</dependency>-->
+		<!-- grpc server -->
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+		<!-- grpc client -->
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
 		</dependency>
 		<dependency> <!-- necessary for Java 9+ -->
 			<groupId>org.apache.tomcat</groupId>
